Fix cart responsivness on mobile

--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -12,11 +12,15 @@
   position: fixed;
   top: 50%;
   right: 50%;
-  width: 30%;
+  width: 90%;
   transform: translate(50%, -50%);
   background-color: white;
   padding: 2rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+
+  @media (min-width: 768px) {
+    width: 40rem;
+  }
 }
